Update README with configuration and project structure
Added configuration paths and updated project structure.

--- a/README
+++ b/README
@@ -7,6 +7,10 @@ Sitio web minimalista y "aesthetic" diseñado para un estudio de Pilates. Enfoca
 * **Tipografía:** *Playfair Display* para elegancia en títulos y *Poppins* para legibilidad en textos.
 * **Estilo:** Glassmorphism (efectos de vidrio esmerilado) y animaciones suaves de entrada.
 
+Configuración de sitios: /etc/nginx/conf.d/ (Archivos con extensión .conf).
+Archivo principal: /etc/nginx/nginx.conf
+Logs de error: /var/log/nginx/error.log.
+
 ## 📂 Estructura del Proyecto Actualizada
 ```text
 aura_pilates/
